--- a/src/main/resources/templates/notes-form.html
+++ b/src/main/resources/templates/notes-form.html
@@ -10,16 +10,27 @@
     <div class="container-md bg-info mt-2 p-2 border border-primary border-3" style="border-radius:15px;">
         <form action="/notes" method="post" th:object="${note}">
             <input type="hidden" name="id"th:field="*{id}">
+            <div class="alert alert-danger alert-dismissible fade show" role="alert" th:if="${errorName}">
+                <p th:text="${errorName}"></p>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="nameInput" name="name" th:field="*{name}">
                 <label for="nameInput" class="text-primary" style="font-weight:600;">Name of the note</label>
+            </div>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert" th:if="${errorText}">
+                <p th:text="${errorText}"></p>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
             <div class="form-floating mb-3">
                 <textarea class="form-control" id="noteText" name="text" th:field="*{text}"></textarea>
                 <label for="noteText" class="text-primary" style="font-weight:600;">Text of the note</label>
             </div>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert" th:if="${errorPriority}">
+                <p th:text="${errorPriority}"></p>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
             <div class="mb-3 bg-light bg-opacity-50 pe-2 border" style="display:flex; justify-content:space-between; align-items:center; border-radius:7px;">
-<!--                <label for="priorityInput" class="form-label p-2" style="font-size:18px;">Priority</label>-->
                 <span class="input-group-text bg-primary text-light" id="basic-addon1">Priority</span>
                 <div id="priorityInput" class="form-check" th:each="priority : ${priorityTypes}">
                     <input class="form-check-input" type="radio" th:value="${priority}" th:text="${priority}"
@@ -41,7 +52,7 @@
             <div class="card-body">
                 <p class="card-text"th:text="${note.text}"></p>
             </div>
-            <div class="card-footer" style="display:flex; justify-content:center;">
+            <div class="card-footer d-grid gap-2">
                 <a type="button" class="btn btn-outline-primary">Edit</a>
             </div>
         </div>
