--- a/src/main/resources/templates/notes-form.html
+++ b/src/main/resources/templates/notes-form.html
@@ -42,22 +42,32 @@
             </div>
         </form>
     </div>
-    <div class="container-md row row-cols-2 mx-auto mt-5 px-auto">
+    <div class="container-md bg-primary rounded p-3 my-4" style="display:flex; justify-content:space-around; align-items:center;">
+        <a type="button" class="btn btn-outline-light" th:each="priority : ${priorityTypes}" th:text="${priority}"></a>
+    </div>
+    <div class="container-md">
+        <h1 class="text-center m-4">Recently taken notes</h1>
+    </div>
+    <div class="container-md row row-cols-2 mx-auto mt-4 px-auto">
         <div class="card text-bg-info mb-3 p-0 m-3" style="max-width: 25rem;" th:each="note : ${notes}">
             <div class="card-header" style="width:100%; display:flex; justify-content:space-around; align-items:center;">
                 <h5 class="mb-0" th:text="${note.name}"></h5>
                 <span class="input-group-text bg-primary text-light" th:text="${note.priority}"></span>
-                <a type="button" class="btn-close"></a>
+                <a type="button" class="btn-close" th:href="@{|/notes/${note.id}/delete|}"></a>
             </div>
             <div class="card-body">
                 <p class="card-text"th:text="${note.text}"></p>
             </div>
             <div class="card-footer d-grid gap-2">
-                <a type="button" class="btn btn-outline-primary">Edit</a>
+                <a type="button" class="btn btn-outline-primary" th:href="@{|/notes/${note.id}|}">Edit</a>
             </div>
         </div>
     </div>
-
+    <div class="container-md border-top border-primary border-3 my-4 d-grid gap-2">
+        <a type="button" class="btn btn-outline-primary btn-lg mt-4">Show all notes</a>
+    </div>
+<!--    th:href="@{|/show/${priority}|"-->
+<!--    th:href="@{|/show|"-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 </body>
