--- a/src/main/resources/templates/notes-form.html
+++ b/src/main/resources/templates/notes-form.html
@@ -64,10 +64,10 @@
         </div>
     </div>
     <div class="container-md border-top border-primary border-3 my-4 d-grid gap-2">
-        <a type="button" class="btn btn-outline-primary btn-lg mt-4">Show all notes</a>
+        <a type="button" class="btn btn-outline-primary btn-lg mt-4" th:href="@{|/show|}">Show all notes</a>
     </div>
 <!--    th:href="@{|/show/${priority}|"-->
-<!--    th:href="@{|/show|"-->
+<!--    -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 </body>
